# greek-model-training

./: .gitignore  MLFLOW.md  README.md  greek_tokenizer  merges.txt  pyproject.toml  vocab.json
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/raw/: hmcgovern_og_lang_raw.sql  raw_corpus.sql
dbt/models/staging/: hmcgovern_normalized.sql  staging_schema.yml  stg_corpus.sql  stg_corpus_cleaned.sql  verse_df.sql
fixed_tokenizer/: tokenizer.json
notebooks/: og_model_experiment.scratch.ipynb  organize_fine_tuning_data.ipynb  pipeline_train.ipynb  tokenizing_embedding.ipynb  updated_training_notebook.ipynb
scripts/: clean_data.py  eval_embeddings.py  export_corpus_from_duckdb.py  finetune_sentence_transformer.py  greek_model_manager.py  load_datasets.py  train_mlm.py  train_mlm_from_pretrained.py  train_tokenizer.py
temp_tokenizer/: tokenizer.json
